--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Vue3 Movie App">
+  <meta property="og:title" content="Vue3 Movie App">
+  <meta property="og:description" content="The OMDb API is a RESTful web service to obtain movie information, all content and images on the site are contributed and maintained by our users.">
+  <meta property="og:image" content="">
+  <meta property="og:url" content="https://graceful-gingersnap-a27996.netlify.app">
+
+  
   <style>
     body {
       line-height: 1.4;
